--- a/Proje/EMA-Tahmin.ipynb
+++ b/Proje/EMA-Tahmin.ipynb
@@ -452,10 +452,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59e44272-928a-486d-9310-38a880237e26",
-   "metadata": {
-    "tags": []
-   },
+   "id": "e0bdfee8-c261-47ea-9156-508ee4c05900",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -468,259 +466,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bugünün kapanış fiyatı: 1.0924185514450073\n",
-      "EMA 50: 1.0801933207961631\n",
-      "EMA 200: 1.0837255542459723\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0925379991531372\n",
-      "EMA 50: 1.0801980050200113\n",
-      "EMA 200: 1.0837267427803816\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0925379991531372\n",
-      "EMA 50: 1.0801980050200113\n",
-      "EMA 200: 1.0837267427803816\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0922993421554565\n",
-      "EMA 50: 1.080188645922063\n",
-      "EMA 200: 1.0837243680838873\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0921800136566162\n",
-      "EMA 50: 1.080183966373089\n",
-      "EMA 200: 1.08372318073564\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0922993421554565\n",
-      "EMA 50: 1.080188645922063\n",
-      "EMA 200: 1.0837243680838873\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0921800136566162\n",
-      "EMA 50: 1.080183966373089\n",
-      "EMA 200: 1.08372318073564\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0921800136566162\n",
-      "EMA 50: 1.080183966373089\n",
-      "EMA 200: 1.08372318073564\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.091941475868225\n",
-      "EMA 50: 1.0801746119500149\n",
-      "EMA 200: 1.0837208072253077\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0920606851577759\n",
-      "EMA 50: 1.0801792868241147\n",
-      "EMA 200: 1.083721993387393\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0920606851577759\n",
-      "EMA 50: 1.0801792868241147\n",
-      "EMA 200: 1.083721993387393\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.0921800136566162\n",
-      "EMA 50: 1.080183966373089\n",
-      "EMA 200: 1.08372318073564\n",
-      "----------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%%**********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bugünün kapanış fiyatı: 1.091941475868225\n",
-      "EMA 50: 1.0801746119500149\n",
-      "EMA 200: 1.0837208072253077\n",
+      "Anlık EUR/USD kuru: 1.0918222665786743\n",
       "----------\n"
      ]
     }
    ],
-   "source": [
-    "\n",
-    "import time\n",
-    "\n",
-    "def calculate_ema(data, span):\n",
-    "    return data.ewm(span=span, adjust=False).mean().iloc[-1]\n",
-    "\n",
-    "def get_ema_values():\n",
-    "    while True:\n",
-    "        try:\n",
-    "            # EUR/USD verisini indir (son bir yıl)\n",
-    "            eur_usd = yf.download('EURUSD=X', period='1y', interval='1d')\n",
-    "\n",
-    "            # EMA hesapla\n",
-    "            ema_50 = calculate_ema(eur_usd['Close'], 50)\n",
-    "            ema_200 = calculate_ema(eur_usd['Close'], 200)\n",
-    "\n",
-    "            # Bugünün kapanış fiyatını al\n",
-    "            today_close = eur_usd['Close'].iloc[-1]\n",
-    "\n",
-    "            \n",
-    "            print(f\"Bugünün kapanış fiyatı: {today_close}\")\n",
-    "            print(f\"EMA 50: {ema_50}\")\n",
-    "            print(f\"EMA 200: {ema_200}\")\n",
-    "            print(\"----------\")\n",
-    "\n",
-    "          \n",
-    "            time.sleep(60)\n",
-    "        except Exception as e:\n",
-    "            print(f\"Bir hata oluştu: {e}\")\n",
-    "            time.sleep(5)  \n",
-    "\n",
-    "\n",
-    "get_ema_values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0bdfee8-c261-47ea-9156-508ee4c05900",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import yfinance as yf\n",
     "import time\n",
